syntax = "proto3";
  
package go.micro.service.greeter;

service Greeter {
    rpc SayHello(SayRequest) returns(SayResponse){}
}

message SayRequest {
    string message = 1;
}

message SayResponse {
    string greeting = 1;
}